# jolt-fib

./: .gitmodules  Cargo.toml  Cross.toml  Makefile  README.md  riscv32im-unknown-none-elf.ld
.devcontainer/: Dockerfile  devcontainer.json
crates/rust-builder/: Cargo.toml
crates/rust-builder/src/: compile.rs  lib.rs  link.rs
crates/rust-builder/tests/: lib.rs
crates/spike-tracer/: Cargo.toml  README.md  build.rs
crates/spike-tracer/.cargo/: config.toml
crates/spike-tracer/src/: autocxx_ffi.rs  lib.rs  log_parser.rs  spike.cc  spike.h  spike.rs
crates/spike-tracer/test_programs/: .gitignore  counter.rs  simple_add.rs
crates/spike-tracer/tests/: common.rs  counter.rs  integration.rs  simple_add.rs
fib/guest/: Cargo.toml
fib/guest/src/: lib.rs  main.rs
fib/host/: Cargo.toml
fib/host/src/: main.rs
guest/: Cargo.toml
guest/src/: main.rs
hello/: README.md
hello/src/: hello.c  linker.ld  start.S
host/: Cargo.toml
jolt-guest-helper/: Cargo.toml
jolt-guest-helper/examples/: README.md  fib.rs  macros.rs
jolt-guest-helper/src/: builder.rs  guest.rs  lib.rs  macros.rs  program.rs  proof.rs
poc/hello/: README.md
poc/hello/src/: main.c  start.S
poc/sum-sq/: Cargo.toml
poc/sum-sq/src/: main.rs
poc/sum/src/: main.rs
sum-sq/: README.md  riscv32im-unknown-none-elf.ld
voj/guest/: Cargo.toml
voj/guest/src/: lib.rs  main.rs
voj/host/: Cargo.toml
voj/host/src/: main.rs
