
[workspace]
resolver = "2"
members = ["fib/guest", "fib/host", "crates/rust-builder", "crates/spike-tracer", ]
default-members = ["fib/host"]

[workspace.dependencies]
jolt-sdk = { git = "https://github.com/a16z/jolt" }
ark-serialize = "0.5.0"
# misc
spinners = "4.1.1"

[profile.release]
debug = 1
codegen-units = 1
lto = false
opt-level = 0

[patch.crates-io]
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "v0.5.0-optimize-mul-u64" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "v0.5.0-optimize-mul-u64" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "v0.5.0-optimize-mul-u64" }

[patch."https://github.com/a16z/jolt"]
jolt-sdk = { path = "overrides/jolt/jolt-sdk" }
