[package]
name = "spike-tracer"
version = "0.1.0"
edition = "2021"
description = "Spike-based RISC-V execution tracer for Jolt"
license = "MIT"

[build-dependencies]
glob = "0.3"
cxx-build = "1.0"

rust-builder = { path = "../rust-builder" }
miette = { version = "5", features = ["fancy"] } # optional but gives nicer error messages!

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
cxx = "1.0"
tempfile = "3.20"
capstone = "0.13.0"
regex = "1.11.0"
jolt-sdk = { workspace = true, features = ["host"] }

[dev-dependencies]
rust-builder = { path = "../rust-builder" }
env_logger = "0.11"
