[package]
name = "fib-host"
version = "0.1.0"
edition = "2021"

[dependencies]
jolt-sdk = { workspace = true, default-features = false, features = ["host"] }
fib-guest = { workspace = true }
ark-serialize = { workspace = true }
spinners = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
postcard = "1.0"
jolt-guest-helper = { path = "../../jolt-guest-helper" }
perf-event2 = { version = "0.7.4" }

[features]
icicle = ["jolt-sdk/icicle"]
