[package]
name = "fib-host"
version = "0.1.0"
edition = "2021"

[dependencies]
jolt-sdk = { workspace = true, features = ["host"] }
guest = { path = "../guest", package = "fib-guest" }
ark-serialize = { workspace = true }
spinners = { workspace = true }
perf-event2 = "0.7"

[features]
icicle = ["jolt-sdk/icicle"]
